added frontend code

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,11 @@
     "deploy": "wrangler deploy --minify src/index.ts"
   },
   "dependencies": {
+    "@heisen_berg79/medium-common": "^1.0.0",
     "@prisma/client": "^5.14.0",
     "@prisma/extension-accelerate": "^1.0.0",
     "hono": "^4.4.0",
-    "prisma": "^5.14.0",
-    "zod": "^3.23.8"
+    "prisma": "^5.14.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240403.0",
